--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ keywords = ["fluent", "testing", "matchers", "assert", "assertions"]
 default = ["num"]
 
 [dependencies]
+pretty_assertions = { version = "0.6" }
 num = { version = "0.1.36", optional = true }
